--- a/sites/site_2/intended/configs/s2-leaf2.cfg
+++ b/sites/site_2/intended/configs/s2-leaf2.cfg
@@ -24,7 +24,7 @@ aaa authorization exec default local
 no enable password
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$.3pQg6C9TutZEfDZ$Q9m7Lb4aYHL.g3Vou.6ge4GI5JLlO8XIQKxzc4QKyr0QfZOV9RmDBJAeZY.HNLDSvTaia6m4cUZ/fT4Eql6/h.
+username arista privilege 15 role network-admin secret sha512 $6$Bh0ODykv79MehoZO$ZFJ0oR8eIbDLyouUulJ420xkfiP.Rbd2YCXHZZ5jBgi0u9ZGCH0Lq/DUHo.PiQDztZPhpr10EQEEktn7wRG541
 !
 vlan 30
    name Thirty
@@ -105,6 +105,11 @@ mlag configuration
    reload-delay non-mlag 330
 !
 ip route 0.0.0.0/0 192.168.0.1
+!
+banner motd
+You shall not pass. Unless you are authorized. Then you shall pass.
+EOF
+
 !
 management api http-commands
    protocol https
