--- a/sites/site_1/intended/configs/s1-leaf4.cfg
+++ b/sites/site_1/intended/configs/s1-leaf4.cfg
@@ -24,7 +24,7 @@ aaa authorization exec default local
 no enable password
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$nJfBV/nJbOsyoiv4$cGN4.Zt.I6swvOgPohQasqAqG/zKdzi4ai8k7X0vyijr.57gIdEVoCsQh6c.3QutwUcDBvy0D08ehwyjrPnb/.
+username arista privilege 15 role network-admin secret sha512 $6$FkxBd3eNJn06T4EK$QJVBn8vOQoYqTfEfQm6G.dHUXBd.mY1cOcbUjvUHOUi.SLDU3qjOBR/WEDUB/Qzem7ngEtwxFq5ULrt2GQuAT0
 !
 vlan 20
    name Twenty
@@ -105,6 +105,11 @@ mlag configuration
    reload-delay non-mlag 330
 !
 ip route 0.0.0.0/0 192.168.0.1
+!
+banner motd
+You shall not pass. Unless you are authorized. Then you shall pass.
+EOF
+
 !
 management api http-commands
    protocol https
