--- a/sites/site_2/intended/configs/s2-spine1.cfg
+++ b/sites/site_2/intended/configs/s2-spine1.cfg
@@ -24,7 +24,7 @@ aaa authorization exec default local
 no enable password
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$j/uOr3HCm3JGGrBT$bwIrtExOzY10QgLBaJ7xXvU6Xek0nNwepZmUFcIp.28c1ovjFw450krselAbUqsJGnP916PbdDxm5PCJFX1T1.
+username arista privilege 15 role network-admin secret sha512 $6$7E4iPpJLs/nZhePK$m4.veA7Pv9GFjcn5wLqqivritp.9sQDfJiKdQUeV7Z.7jG3w.dPwv3owCmVPUhthdhriTi8N.Z1mlzlT/Yfiy1
 !
 vlan 30
    name Thirty
@@ -173,6 +173,11 @@ router ospf 100
    no passive-interface Ethernet8
    max-lsa 12000
    redistribute connected
+!
+banner motd
+You shall not pass. Unless you are authorized. Then you shall pass.
+EOF
+
 !
 management api http-commands
    protocol https
