--- a/sites/site_2/intended/configs/s2-spine2.cfg
+++ b/sites/site_2/intended/configs/s2-spine2.cfg
@@ -24,7 +24,7 @@ aaa authorization exec default local
 no enable password
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$gKrnt6uXNrCp4XrV$iCumtUei8ZxcXmOEtjQ387CE02XszSBhk0LgdVw.3h4DQUO9HyVO6Fhl8fPIfVO1vruQEgmqTvT8MaKrxeYkY0
+username arista privilege 15 role network-admin secret sha512 $6$cprhWgSuse2cdfQL$lTw.KKKyLwR9NnOG3b0PxdZtVP2EHS.Pzjn5EIzmw9Zmqs1duHYJFj89lIFLa2W27PTY2d5XBnYa9SECtAyTg.
 !
 vlan 30
    name Thirty
@@ -173,6 +173,11 @@ router ospf 100
    no passive-interface Ethernet8
    max-lsa 12000
    redistribute connected
+!
+banner motd
+You shall not pass. Unless you are authorized. Then you shall pass.
+EOF
+
 !
 management api http-commands
    protocol https
