--- a/sites/site_2/intended/configs/s2-leaf3.cfg
+++ b/sites/site_2/intended/configs/s2-leaf3.cfg
@@ -10,6 +10,10 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
+logging host 10.200.0.108
+logging host 10.200.1.108
+logging source-interface Management0
+!
 hostname s2-leaf3
 dns domain atd.lab
 !
@@ -24,7 +28,7 @@ aaa authorization exec default local
 no enable password
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$L91cDLlMazw53TlK$Fg23nxVJybkAe6yAaIITzz3pPnOOC3wXNgFLIsGBzeRsTzrA6rzS6z/.XSooalqHWzXEnKGYgEAw4R15luulL1
+username arista privilege 15 role network-admin secret sha512 $6$uTY.5wQ3ItM59EF6$z8x0CJPyrgTLdeRqF6XwFUPCW.lA7mHcbQNqBfGnVYcVfo5myR5YaVi06rx7oI6apg1VENot00NeIbjyrH0KI.
 !
 vlan 40
    name Forty
