--- a/sites/site_2/intended/configs/s2-spine1.cfg
+++ b/sites/site_2/intended/configs/s2-spine1.cfg
@@ -10,6 +10,10 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
+logging host 10.200.0.108
+logging host 10.200.1.108
+logging source-interface Management0
+!
 hostname s2-spine1
 dns domain atd.lab
 !
@@ -24,7 +28,7 @@ aaa authorization exec default local
 no enable password
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$7E4iPpJLs/nZhePK$m4.veA7Pv9GFjcn5wLqqivritp.9sQDfJiKdQUeV7Z.7jG3w.dPwv3owCmVPUhthdhriTi8N.Z1mlzlT/Yfiy1
+username arista privilege 15 role network-admin secret sha512 $6$rIwnM.cYWDJ.iJ8n$fnLfh.1FTsDL13LJjNl1wQDhIHQN76dt6OANj3m8jUlJFhCu9U1.fWN1hNxkYvjYbH8PZmwWdQ7qru7ONgHfo.
 !
 vlan 30
    name Thirty
