--- a/sites/site_1/intended/configs/s1-spine2.cfg
+++ b/sites/site_1/intended/configs/s1-spine2.cfg
@@ -28,7 +28,7 @@ aaa authorization exec default local
 no enable password
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$JzxkrEQDdE8Uh09o$03Q7VPB5Emrn.7EUWrIwncHjdqSx2r/Vr1sxbbmkQD79LYFtR5NWfkY.hCE47szYDT/66bi1PjdEYCl7jlezT1
+username arista privilege 15 role network-admin secret sha512 $6$1NTlWbWtzsByr1n0$jMooIIA0MYxrscZOKh/uVRLcQRHmM7L9NxMfX.78tc.eITVejLjvSQgJ.ccqXVEFS1w4NBtNz5vQgS6tuiGsc0
 !
 vlan 10
    name Ten
@@ -68,6 +68,14 @@ interface Port-Channel4
    switchport trunk allowed vlan 20
    switchport mode trunk
    mlag 4
+!
+interface Port-Channel9
+   description RACK3_Po2
+   no shutdown
+   switchport
+   switchport trunk allowed vlan 10,20
+   switchport mode trunk
+   mlag 9
 !
 interface Ethernet1
    description MLAG_PEER_s1-spine1_Ethernet1
@@ -116,6 +124,16 @@ interface Ethernet8
    ip address 10.0.0.35/31
    ip ospf network point-to-point
    ip ospf area 0.0.0.0
+!
+interface Ethernet9
+   description S1-LEAF5_Ethernet3
+   no shutdown
+   channel-group 9 mode active
+!
+interface Ethernet10
+   description S1-LEAF6_Ethernet3
+   no shutdown
+   channel-group 9 mode active
 !
 interface Loopback0
    description Router_ID
