--- a/sites/site_2/config_backup/s2-leaf1_post_running-config.conf
+++ b/sites/site_2/config_backup/s2-leaf1_post_running-config.conf
@@ -3,7 +3,7 @@
 !
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$AEcJazWEfD2jLOQm$yl3nZe4mtF7peH3yijUzsNcdK.4s.dNpIm3W1ZxzwPZV/YFEVXi.Z0n64Janh/f9euJmglyktqz0Fddg8GsgU.
+username arista privilege 15 role network-admin secret sha512 $6$GDssMi9erSkXUT6m$TYOC1XfqOHedO.NZZZFEi3tL94Dx.J0oe.uRRcbSn1a3HkBczajPcPdiwQQpO82.Ww7J.IwvxNf8ykJ0CkyFE0
 !
 daemon TerminAttr
    exec /usr/bin/TerminAttr -cvaddr=192.168.0.5:9910 -cvauth=token,/tmp/token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
@@ -14,6 +14,10 @@ vlan internal order ascending range 1006 1199
 transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
+!
+logging host 10.200.0.108
+logging host 10.200.1.108
+logging source-interface Management0
 !
 hostname s2-leaf1
 dns domain atd.lab
@@ -28,6 +32,10 @@ vlan 30
 vlan 4094
    name MLAG_PEER
    trunk group MLAG
+!
+banner motd
+You shall not pass. Unless you are authorized. Then you shall pass.
+EOF
 !
 management api http-commands
    no shutdown
